kyverno/background-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyverno-background-controller
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 40%
  template:
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels: {}
                topologyKey: kubernetes.io/hostname
              weight: 1
      serviceAccountName: kyverno-background-controller
      containers:
        - name: controller
          image: ghcr.io/kyverno/background-controller
          args:
            - --enableTracing=$(KYVERNO_ENABLE_TRACING)
          ports:
            - containerPort: 9443
              name: https
              protocol: TCP
            - containerPort: 8000
              name: metrics
              protocol: TCP
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
